@startuml 訂單系統類別圖 - UML 2.5 標準化版本
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam packageStyle rectangle

' UML 2.5 標準配色
skinparam class {
    BackgroundColor<<AggregateRoot>> #LightSalmon
    BorderColor<<AggregateRoot>> #DC143C
    FontColor<<AggregateRoot>> #000000
    
    BackgroundColor<<Entity>> #LightBlue
    BorderColor<<Entity>> #4682B4
    FontColor<<Entity>> #000000
    
    BackgroundColor<<ValueObject>> #LightGreen
    BorderColor<<ValueObject>> #228B22
    FontColor<<ValueObject>> #000000
    
    BackgroundColor<<DomainEvent>> #LightYellow
    BorderColor<<DomainEvent>> #FFD700
    FontColor<<DomainEvent>> #000000
    
    BackgroundColor<<Service>> #LightGray
    BorderColor<<Service>> #696969
    FontColor<<Service>> #000000
    
    BackgroundColor<<Repository>> #LightCyan
    BorderColor<<Repository>> #008B8B
    FontColor<<Repository>> #000000
    
    BackgroundColor<<Factory>> #LightPink
    BorderColor<<Factory>> #FF1493
    FontColor<<Factory>> #000000
}

package "domain.order.model.aggregate" <<Rectangle>> {
  class Order <<AggregateRoot>> {
    -OrderId id
    -List<OrderItem> items
    -OrderStatus status
    -Money totalAmount
    -Money discountAmount
    -String shippingAddress
    -LocalDateTime createdAt
    -LocalDateTime updatedAt
    --
    +addItem(item: OrderItem): void
    +removeItem(itemId: String): void
    +updateStatus(status: OrderStatus): void
    +calculateTotal(): Money
    +applyDiscount(amount: Money): void
    +submit(): void
    +cancel(): void
    +getUncommittedEvents(): List<DomainEvent>
    +markEventsAsCommitted(): void
  }
}

package "domain.common.valueobject" <<Rectangle>> {
  class OrderItem <<Entity>> {
    -String itemId
    -String productId
    -String productName
    -int quantity
    -Money unitPrice
    --
    +calculateSubtotal(): Money
    +updateQuantity(quantity: int): void
    +equals(other: Object): boolean
    +hashCode(): int
  }

  class Money <<ValueObject>> {
    -BigDecimal amount
    -Currency currency
    --
    +add(other: Money): Money
    +subtract(other: Money): Money
    +multiply(quantity: int): Money
    +multiply(multiplier: double): Money
    +divide(divisor: int): Money
    +isGreaterThan(other: Money): boolean
    +isLessThan(other: Money): boolean
    +equals(other: Object): boolean
    +hashCode(): int
    --
    +{static} of(amount: BigDecimal, currencyCode: String): Money
    +{static} of(amount: double, currencyCode: String): Money
    +{static} twd(amount: double): Money
    +{static} zero(): Money
  }

  enum OrderStatus <<ValueObject>> {
    CREATED
    PENDING
    CONFIRMED
    PROCESSING
    SHIPPED
    DELIVERED
    COMPLETED
    CANCELLED
    --
    +canTransitionTo(newStatus: OrderStatus): boolean
    +isTerminalState(): boolean
  }

  class OrderId <<ValueObject>> {
    -UUID id
    --
    +toString(): String
    +equals(other: Object): boolean
    +hashCode(): int
    --
    +{static} generate(): OrderId
    +{static} of(uuid: UUID): OrderId
  }
}

package "application.order.service" <<Rectangle>> {
  class OrderApplicationService <<Service>> {
    -OrderFactory orderFactory
    -OrderRepository orderRepository
    -PaymentServicePort paymentService
    -LogisticsServicePort logisticsService
    -OrderMapper orderMapper
    -DomainEventPublisher eventPublisher
    --
    +createOrder(cmd: CreateOrderCommand): OrderResponse
    +addOrderItem(cmd: AddOrderItemCommand): OrderResponse
    +processOrder(orderId: OrderId): void
    +confirmOrder(orderId: OrderId): OrderResponse
    +cancelOrder(orderId: OrderId): OrderResponse
    +getOrderById(orderId: OrderId): OrderResponse
  }
}

package "application.order.mapper" <<Rectangle>> {
  class OrderMapper <<Service>> {
    --
    +toDto(order: Order): OrderDto
    +toResponse(order: Order): OrderResponse
    +fromCommand(cmd: CreateOrderCommand): Order
    +toSummaryDto(order: Order): OrderSummaryDto
  }
}

package "domain.order.model.factory" <<Rectangle>> {
  class OrderFactory <<Factory>> {
    --
    +createOrder(customerId: String, shippingAddress: String): Order
    +createOrderItem(productId: String, productName: String, quantity: int, unitPrice: Money): OrderItem
    +createOrderFromCommand(cmd: CreateOrderCommand): Order
    --
    -validateOrderCreation(customerId: String, shippingAddress: String): void
    -generateOrderId(): OrderId
  }
}

package "domain.common.event" <<Rectangle>> {
  interface DomainEvent <<DomainEvent>> {
    +getEventId(): UUID
    +getOccurredOn(): LocalDateTime
    +getEventType(): String
    +getAggregateId(): String
    +getAggregateType(): String
  }
}

package "domain.order.model.events" <<Rectangle>> {
  class OrderCreatedEvent <<DomainEvent>> {
    -UUID eventId
    -OrderId orderId
    -String customerId
    -String shippingAddress
    -LocalDateTime occurredOn
    --
    +getEventId(): UUID
    +getOccurredOn(): LocalDateTime
    +getEventType(): String
    +getAggregateId(): String
    --
    +{static} create(orderId: OrderId, customerId: String, shippingAddress: String): OrderCreatedEvent
  }

  class OrderItemAddedEvent <<DomainEvent>> {
    -UUID eventId
    -OrderId orderId
    -String itemId
    -String productId
    -int quantity
    -Money unitPrice
    -LocalDateTime occurredOn
    --
    +getEventId(): UUID
    +getOccurredOn(): LocalDateTime
    +getEventType(): String
    +getAggregateId(): String
    --
    +{static} create(orderId: OrderId, itemId: String, productId: String, quantity: int, unitPrice: Money): OrderItemAddedEvent
  }
}

package "domain.payment.model.aggregate" {
  class Payment {
    -PaymentId paymentId
    -OrderId orderId
    -Money amount
    -PaymentMethod method
    -PaymentStatus status
    -String transactionId
    -String failureReason
    -LocalDateTime createdAt
    -LocalDateTime updatedAt
    +complete(String transactionId)
    +fail(String reason)
    +refund()
    +retry()
  }
}

package "domain.pricing.model.aggregate" {
  class PricingRule {
    -PriceId priceId
    -ProductId productId
    -PromotionId promotionId
    -Money finalPrice
    -double discountPercentage
    -Money discountAmount
    -LocalDateTime effectiveFrom
    -LocalDateTime effectiveTo
    -boolean isActive
    -List<CommissionRate> commissionRates
    -ProductCategory productCategory
    +isValidNow()
    +calculateCommission(boolean isEventPromotion)
    +updateCommissionRate(int normalRate, int eventRate)
    +deactivate()
    +activate()
  }
}

package "domain.delivery.model.aggregate" {
  class Delivery {
    -DeliveryId id
    -OrderId orderId
    -String shippingAddress
    -DeliveryStatus status
    -String deliveryPersonId
    -String deliveryPersonName
    -String deliveryPersonContact
    -LocalDateTime estimatedDeliveryTime
    -LocalDateTime actualDeliveryTime
    -String trackingNumber
    -String failureReason
    -boolean redeliveryScheduled
    -LocalDateTime createdAt
    -LocalDateTime updatedAt
    +allocateResources(String deliveryPersonId, String deliveryPersonName, String deliveryPersonContact, LocalDateTime estimatedDeliveryTime)
    +updateAddress(String newAddress)
    +markAsDelivered()
    +markAsFailed(String reason)
    +markAsRefused(String reason)
    +markAsDelayed(String reason, LocalDateTime newEstimatedDeliveryTime)
    +cancel()
    +scheduleRedelivery()
    +rearrange()
  }
}

package "domain.common.valueobject" {
  enum PaymentStatus {
    PENDING
    COMPLETED
    FAILED
    REFUNDED
  }
  
  enum PaymentMethod {
    CREDIT_CARD
    DEBIT_CARD
    BANK_TRANSFER
    DIGITAL_WALLET
    CASH_ON_DELIVERY
  }
  
  enum ProductCategory {
    ELECTRONICS
    FASHION
    GROCERIES
    HOME_APPLIANCES
    BEAUTY
    SPORTS
    BOOKS
    TOYS
    AUTOMOTIVE
    HEALTH
    GENERAL
  }
  
  enum DeliveryStatus {
    PENDING_SHIPMENT
    IN_TRANSIT
    DELIVERED
    DELAYED
    DELIVERY_FAILED
    REFUSED
    CANCELLED
  }
}

package "domain.pricing.model.entity" <<Rectangle>> {
  class CommissionRate <<Entity>> {
    -ProductCategory category
    -int normalRate
    -int eventRate
    --
    +getNormalRate(): int
    +getEventRate(): int
    +setNormalRate(rate: int): void
    +setEventRate(rate: int): void
    +calculateCommission(amount: Money, isEvent: boolean): Money
  }
}

package "domain.order.repository" <<Rectangle>> {
  interface OrderRepository <<Repository>> {
    +save(order: Order): Order
    +findById(orderId: OrderId): Optional<Order>
    +findByCustomerId(customerId: String): List<Order>
    +findByStatus(status: OrderStatus): List<Order>
    +delete(orderId: OrderId): void
    +existsById(orderId: OrderId): boolean
  }
}

' 聚合關係 (Composition)
Order "1" *-- "*" OrderItem : contains
Order "1" *-- "1" OrderId : identified by
Order "1" *-- "1" OrderStatus : has status
Order "1" *-- "1" Money : totalAmount
Order "1" *-- "1" Money : discountAmount

' 值對象關係
OrderItem "1" *-- "1" Money : unitPrice

' 應用服務依賴 (Dependency)
OrderApplicationService ..> OrderFactory : uses
OrderApplicationService ..> OrderRepository : uses
OrderApplicationService ..> OrderMapper : uses
OrderApplicationService ..> Order : manages

' 事件發布關係 (Dependency)
Order ..> OrderCreatedEvent : publishes
Order ..> OrderItemAddedEvent : publishes

' 介面實現 (Realization)
OrderCreatedEvent ..|> DomainEvent : implements
OrderItemAddedEvent ..|> DomainEvent : implements

' 支付聚合關係
Payment "1" *-- "1" PaymentStatus : has status
Payment "1" *-- "1" PaymentMethod : uses method
Payment "1" *-- "1" Money : amount
Payment "1" --> "1" OrderId : references

' 定價聚合關係
PricingRule "1" *-- "*" CommissionRate : contains
PricingRule "1" *-- "1" ProductCategory : categorized by
PricingRule "1" *-- "1" Money : finalPrice
PricingRule "1" *-- "1" Money : discountAmount

' 配送聚合關係
Delivery "1" *-- "1" DeliveryStatus : has status
Delivery "1" --> "1" OrderId : references

' UML 註解
note right of Order
  <b>訂單聚合根</b>
  - 維護訂單一致性
  - 發布領域事件
  - 實現業務規則
end note

note right of OrderStatus
  <b>訂單狀態值對象</b>
  - 不可變狀態
  - 狀態轉換規則
end note

note right of DomainEvent
  <b>領域事件介面</b>
  - 事件溯源支援
  - 跨聚合通信
end note

note right of Payment
  <b>支付聚合根</b>
  - 支付流程管理
  - 風險控制
end note

note right of PricingRule
  <b>定價規則聚合根</b>
  - 動態定價
  - 佣金計算
end note

note right of Delivery
  <b>配送聚合根</b>
  - 配送狀態管理
  - 物流追蹤
end note

' 圖例
legend right
  |= 元素類型 |= 顏色 |= 說明 |
  | <back:#LightSalmon>   </back> | 聚合根 | DDD 聚合根實體 |
  | <back:#LightBlue>   </back> | 實體 | 具有唯一標識的對象 |
  | <back:#LightGreen>   </back> | 值對象 | 不可變的值對象 |
  | <back:#LightYellow>   </back> | 領域事件 | 業務事件 |
  | <back:#LightGray>   </back> | 服務 | 應用服務和領域服務 |
  | <back:#LightCyan>   </back> | 儲存庫 | 資料存取介面 |
  | <back:#LightPink>   </back> | 工廠 | 對象創建工廠 |
  |= 關係類型 |= 符號 |= 說明 |
  | 組合 | *-- | 強擁有關係 |
  | 聚合 | o-- | 弱擁有關係 |
  | 關聯 | --> | 引用關係 |
  | 依賴 | ..> | 使用關係 |
  | 實現 | ..\|> | 介面實現 |
endlegend

@enduml